--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -36,6 +36,7 @@
         tools:listitem="@layout/item_team_banner" />
 
     <Button
+        android:id="@+id/expand_banner_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
