--- a/app/src/main/res/layout/item_team_banner.xml
+++ b/app/src/main/res/layout/item_team_banner.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/rectangle"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rectangle">
 
 
     <TextView
@@ -19,11 +19,14 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="@id/picture"
+        app:layout_constraintEnd_toEndOf="@id/introduction"
         app:layout_constraintStart_toEndOf="@id/picture"
         app:layout_constraintTop_toTopOf="@id/picture"
         tools:text="김민수" />
@@ -36,7 +39,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:lines="2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
